--- a/styles/courses/Courses.module.scss
+++ b/styles/courses/Courses.module.scss
@@ -18,8 +18,8 @@
       }
     }
   }
-  &__list {}
   &__card {
+    margin: 30px 0;
   }
   &__inner {
     @media (max-width: 701px) {
@@ -34,11 +34,15 @@
     gap: 30px;
   }
   &__left {
-    max-width: 200px;
-    max-height: 200px;
+    max-width: 300px;
+    max-height: 300px;
   }
   &__logo {
     max-width: 100%;
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    padding: 10px;
   }
   &__middle {
     @media (max-width: 701px) {
